cmake_minimum_required(VERSION 3.0.0)
project(chapter_1)

# Choose a question to run
# set(SOURCE_FILES question1_ch1.cpp)
# set(SOURCE_FILES question2_ch1.cpp)
# set(SOURCE_FILES question3_ch1.cpp)
# set(SOURCE_FILES question4_ch1.cpp)
# set(SOURCE_FILES question5_ch1.cpp)
set(SOURCE_FILES question6_ch1.cpp)

add_executable(chapter_1 ${SOURCE_FILES})
