cmake_minimum_required(VERSION 3.0.0)
project(chapter_2)

# Choose a question to run.
# set(SOURCE_FILES question1_ch2.cpp)
# set(SOURCE_FILES question2_ch2.cpp)
# set(SOURCE_FILES question3_ch2.cpp)
# set(SOURCE_FILES question4_ch2.cpp)
# set(SOURCE_FILES question5_ch2.cpp)
set(SOURCE_FILES question6_ch2.cpp)
# set(SOURCE_FILES question7_ch2.cpp)
# set(SOURCE_FILES question8_ch2.cpp)

add_executable(chapter_2 ${SOURCE_FILES})
