cmake_minimum_required(VERSION 3.0.0)
project(chapter_3)

# Choose a question to run.
# set(SOURCE_FILES question1_ch3.cpp)
# set(SOURCE_FILES question2_ch3.cpp)
# set(SOURCE_FILES question3_ch3.cpp)
set(SOURCE_FILES question4_ch3.cpp)
# set(SOURCE_FILES question5_ch3.cpp)
# set(SOURCE_FILES question6_ch3.cpp)

add_executable(chapter_3 ${SOURCE_FILES})